--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="family.jpg" alt="Family" style="width:100%" class="w3-hover-opacity">
+      <img src="family.JPG" alt="Family" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Family</b></p>
         <p>I love spending time with family. Here is a photo from 2005, with me and my mom.</p>
