--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
             <span class="w3-opacity">Class of 2020</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <button class="w3-button w3-teal w3-padding-large w3-hover-black">Sign Up</button>
+            <button class="w3-button w3-teal w3-padding-large w3-hover-black">Learn More</button>
           </li>
         </ul>
       </div>
@@ -187,7 +187,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
             <span class="w3-opacity">2017</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <button class="w3-button w3-teal w3-padding-large w3-hover-black">Learn More.</button>
+            <button class="w3-button w3-teal w3-padding-large w3-hover-black">Learn More</button>
           </li>
         </ul>
       </div>
@@ -204,7 +204,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
             <span class="w3-opacity">2011-present</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
-            <button class="w3-button w3-teal w3-padding-large w3-hover-black">Sign Up</button>
+            <button class="w3-button w3-teal w3-padding-large w3-hover-black">Learn More</button>
           </li>
         </ul>
       </div>
