--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="canada_games.jpg" alt="Image from Canada Games" style="width:100%" class="w3-hover-opacity">
+      <img src="canada_games.JPG" alt="Image from Canada Games" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>2017 Canada Games</b></p>
         <p>This is an image of me starting my final in the 200m Breaststroke at the Canada Games.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="keji.jpg" alt="Image of Keji National Park" style="width:100%" class="w3-hover-opacity">
+      <img src="keji.JPG" alt="Image of Keji National Park" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Duke of Edinburgh - Silver</b></p>
         <p>In October of 2018 myself and fellow classmates went on a two night backpacking trip through Kejimkujik National Park. This was the qualifying expedition for the Duke of Edinburgh Silver. </p>
@@ -86,14 +86,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="awards.jpg" alt="My Awards" style="width:100%" class="w3-hover-opacity">
+      <img src="awards.JPG" alt="My Awards" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Nova Scotia Citizenship Award</b></p>
         <p>In 2017 I was awarded the Nova Scotia Citizenship Award. This award is given to one grade 9 student who demonstrates good citizenship in their community. Here I am pictured with Mayor Mike Savage and my local representitive Toni Mancini.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-       <a href="https://youtu.be/cxQo0To1-Go"><img src="travel.jpg" alt="Travel image" style="width:100%" class="w3-hover-opacity"></a>
+       <a href="https://youtu.be/cxQo0To1-Go"><img src="travel.JPG" alt="Travel image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Travel</b></p>
         <p>I love to travel the world. This past summer I had the opportunity to travel to the Rockys in Alberta. Click the image to watch a short video from the trip.</p>
@@ -117,10 +117,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="running_image.jpg" alt="Me" style="width:100%">
+      <img src="running_image.JPG" alt="Me" style="width:100%">
     </div>
     <div class="w3-col m6">
-      <img src="swimming_image.jpg" alt="Me" style="width:100%">
+      <img src="swimming_image.JPG" alt="Me" style="width:100%">
     </div>
   </div>
 
@@ -258,12 +258,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <h3>BLOG POSTS</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <img src="running_image.jpg" class="w3-left w3-margin-right" style="width:50px">
+          <img src="running_image.JPG" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Epic Canadian</span><br>
           <span>Running</span>
         </li>
         <li class="w3-padding-16">
-          <img src="swimming_image.jpg" class="w3-left w3-margin-right" style="width:50px">
+          <img src="swimming_image.JPG" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Canada Games</span><br>
           <span>2017</span>
         </li> 
