--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.PNG" alt="Webpage on Vint Cerf" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.png" alt="Webpage on Vint Cerf" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Tribute on Vint Cerf</b></p>
         <p>This is a short web page all about one of the founders of the internet, Vint Cerf. The internet would not be possible without his work, and many things he has created we use every single day. Click the image to view.</p>
