--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="https://www.facebook.com/matthew.croft.ca"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/matthewcroft_/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
     <a href="https://imgur.com/a/dS7BpqB"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
-    <a href="https://pinterest.com"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
+    <a href="https://www.pinterest.ca/mcroft4682/"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
     <a href="https://twitter.com/MatthewCroft_"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/matthew-croft-b814b6146"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   </div>
