--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="canada_games.JPG" alt="Image from Canada Games" style="width:100%" class="w3-hover-opacity">
+      <a href="https://cg2017.gems.pro/Result/ShowPerson.aspx?Person_GUID=44b5cd2e-140b-4621-b8f7-9d0bae72067e&SetLanguage=en-CA&Gems_ScreenWidth=1366&Gems_ScreenHeight=768&Gems_ScreenAvailWidth=1366&Gems_ScreenAvailHeight=677"><img src="canada_games.JPG" alt="Image from Canada Games" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>2017 Canada Games</b></p>
         <p>This is an image of me starting my final in the 200m Breaststroke at the Canada Games.</p>
