--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="awards.JPG" alt="My Awards" style="width:100%" class="w3-hover-opacity">
+      <a href="https://www.halifax.ca/sites/default/files/documents/city-hall/districts-councillors/3237%20Mancini%20Final%20FINAL.PDF"><img src="awards.JPG" alt="My Awards" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Nova Scotia Citizenship Award</b></p>
         <p>In 2017 I was awarded the Nova Scotia Citizenship Award. This award is given to one grade 9 student who demonstrates good citizenship in their community. Here I am pictured with Mayor Mike Savage and my local representitive Toni Mancini.</p>
