--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     <p>
       <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
-       <a href="example_resume.PDF" download="example_resume">
+       <a href="example_resume.pdf" download="example_resume">
 		   <i class="fa fa-download w3-margin-right"></i>Download Resume (Now Avalible!)
 	   </a>
       </button>
