--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 }
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
-
+<h2 class= "w3-panel w3-black w3-round-xlarge w3-hide-large w3-hide-medium w3-center" ><b>My Portfolio - Matthew Croft</b></h2>
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container">
@@ -62,15 +62,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	<a href="#"><img src="profile-photo.JPG" alt="Profile Photo" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="container">
-	<img src="background.JPG" alt="image of Banff" style="width:100%;margin: auto">
-	<div class="text-block">
+	<div class="text-block w3-hide-small">
 	<h1><b>My Portfolio - Matthew Croft</b></h1>
 	</div>
+	<img src="background.JPG" alt="image of Banff" class="w3-hide-small" style="width:100%;margin:auto">
 	</div>
-    <div class="w3-section w3-bottombar w3-padding-16">
-      <span class="w3-margin-right">Filter (Coming Soon):</span> 
-      <button class="w3-button w3-black">ALL</button>
-      <button class="w3-button w3-white"><i class="fa fa-diamond w3-margin-right"></i>Web Design</button>
+    <div class="w3-section w3-bottombar w3-padding-16 w3-margin-left">
+      <span class="w3-margin-right w3-hide-small">Filter (Coming Soon):</span> 
+      <button class="w3-button w3-black w3-hide-small">ALL</button>
+      <button class="w3-button w3-white w3-hide-small"><i class="fa fa-diamond w3-margin-right"></i>Web Design</button>
       <button class="w3-button w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Photography</button>
       <button class="w3-button w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Other Interests</button>
     </div>
