font and shadowing updates

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     padding-left: 20px;
     padding-right: 20px;
 }
+
+}	
+
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 <h2 class= "w3-panel w3-black w3-round-xlarge w3-hide-large w3-hide-medium w3-center" ><b>My Portfolio - Matthew Croft</b></h2>
@@ -31,7 +34,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="profile-photo.JPG" alt="Profile Photo" style="width:45%;" class="w3-round"><br><br>
+    <img src="profile-photo.JPG" alt="Profile Photo" style="width:65%;" class="w3-round"><br><br>
     <h4><b>PORTFOLIO</b></h4>
     <p class="w3-text-grey">~Matthew Croft</p>
   </div>
@@ -62,10 +65,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	<a href="#"><img src="profile-photo.JPG" alt="Profile Photo" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="container">
-	<div class="text-block w3-hide-small">
-	<h1><b>My Portfolio - Matthew Croft</b></h1>
+	<div class="text-block w3-hide-small" style=" box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 0px 8px 0;">
+	<h2><b>My Portfolio - Matthew Croft</b></h1>
 	</div>
-	<img src="background.JPG" alt="image of Banff" class="w3-hide-small" style="width:100%;margin:auto">
+	<img src="background.JPG" alt="image of Banff" class="" style="width:100%;margin:auto">
 	</div>
     <div class="w3-section w3-bottombar w3-padding-16 w3-margin-left">
       <span class="w3-margin-right w3-hide-small">Filter (Coming Soon):</span> 
@@ -79,22 +82,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.png" alt="Webpage on Vint Cerf" style="width:100%" class="w3-hover-opacity"title="Visit Tribute Page"></a>
+    <div class="w3-third w3-container w3-margin-bottom" >
+      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.png" alt="Webpage on Vint Cerf" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"title="Visit Tribute Page"></a>
       <div class="w3-container w3-white">
         <p><b>Tribute on Vint Cerf</b></p>
         <p>This is a short web page all about one of the founders of the internet, Vint Cerf. The internet would not be possible without his work, and many things he has created we use every single day. Click the image to view.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://cg2017.gems.pro/Result/ShowPerson.aspx?Person_GUID=44b5cd2e-140b-4621-b8f7-9d0bae72067e&SetLanguage=en-CA&Gems_ScreenWidth=1366&Gems_ScreenHeight=768&Gems_ScreenAvailWidth=1366&Gems_ScreenAvailHeight=677"><img src="canada_games.JPG" title="Canada Games Profile" alt="Image from Canada Games" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://cg2017.gems.pro/Result/ShowPerson.aspx?Person_GUID=44b5cd2e-140b-4621-b8f7-9d0bae72067e&SetLanguage=en-CA&Gems_ScreenWidth=1366&Gems_ScreenHeight=768&Gems_ScreenAvailWidth=1366&Gems_ScreenAvailHeight=677"><img src="canada_games.JPG" title="Canada Games Profile" alt="Image from Canada Games" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>2017 Canada Games</b></p>
         <p>This is an image of me starting my final in the 200m Breaststroke at the Canada Games.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="keji.JPG" alt="Image of Keji National Park"  style="width:100%" class="w3-hover-opacity">
+      <img src="keji.JPG" alt="Image of Keji National Park"  style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Duke of Edinburgh - Silver</b></p>
         <p>In October of 2018 myself and fellow classmates went on a two night backpacking trip through Kejimkujik National Park. This was the qualifying expedition for the Duke of Edinburgh Silver. </p>
@@ -105,21 +108,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://www.halifax.ca/sites/default/files/documents/city-hall/districts-councillors/3237%20Mancini%20Final%20FINAL.PDF"><img src="awards.JPG" title="Toni Mancini News Letter" alt="My Awards" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://www.halifax.ca/sites/default/files/documents/city-hall/districts-councillors/3237%20Mancini%20Final%20FINAL.PDF"><img src="awards.JPG" title="Toni Mancini News Letter" alt="My Awards" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Nova Scotia Citizenship Award</b></p>
         <p>In 2017 I was awarded the Nova Scotia Citizenship Award. This award is given to one grade 9 student who demonstrates good citizenship in their community. Here I am pictured with Mayor Mike Savage and my local representitive Toni Mancini.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-       <a href="https://youtu.be/cxQo0To1-Go"><img src="travel.JPG" title="Watch Video" alt="Travel image" style="width:100%" class="w3-hover-opacity"></a>
+       <a href="https://youtu.be/cxQo0To1-Go"><img src="travel.JPG" title="Watch Video" alt="Travel image" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Travel</b></p>
         <p>I love to travel the world. This past summer I had the opportunity to travel to the Rockys in Alberta. Click the image to watch a short video from the trip.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="family.JPG" alt="Family" style="width:100%" class="w3-hover-opacity">
+      <img src="family.JPG" alt="Family" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Family</b></p>
         <p>I love spending time with family. Here is a photo from 2005, with me and my mom.</p>
@@ -336,7 +339,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
   </footer>
   
-  <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
+  <div class="w3-black w3-center w3-padding-24">Designed by <a href="https://mattc2020.github.io/" title="W3.CSS" target="_blank" class="w3-hover-opacity">Matthew Croft</a></div>
 
 <!-- End page content -->
 </div>
