--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>PORTFOLIO</a> 
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
-	<a href="https://mattc2020.github.io/sign-in/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class=" fa fa-plus-square fa-fw w3-margin-right"></i>SIGN_IN</a> 
+	<a href="https://mattc2020.github.io/sign-in/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-plus-square w3-margin-right" style="font-size:18px; padding-left: 2px;"> </i>SIGN-IN</a>
   </div>
   <div class="w3-panel w3-large">
     <a href="https://www.facebook.com/matthew.croft.ca"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
@@ -339,8 +339,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </footer>
   
   <div class="w3-black w3-center w3-padding-24">Designed by <a href="https://mattc2020.github.io/" title="W3.CSS" target="_blank" class="w3-hover-opacity">Matthew Croft</a></div>
-
-<!-- End page content -->
+	<div style="text-align: center; background-color:black">
+	<div class="w3-tag w3-white w3-xlarge w3-margin-bottom">
+	<a href="https://www.facebook.com/matthew.croft.ca"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/matthewcroft_/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://imgur.com/a/dS7BpqB"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
+    <a href="https://www.pinterest.ca/mcroft4682/"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
+    <a href="https://twitter.com/MatthewCroft_"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/matthew-croft-b814b6146"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+	</div>
+	</div>
+	<!-- End page content -->
 </div>
 
 <script>
