update to bottom

--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -73,6 +73,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     </div>
   </header>
+  
+  
+    <div class="w3-black w3-center w3-padding-24">Designed by <a href="https://mattc2020.github.io/" title="W3.CSS" target="_blank" class="w3-hover-opacity">Matthew Croft</a></div>
+	<div style="text-align: center; background-color:black">
+	<div class="w3-tag w3-white w3-xlarge w3-margin-bottom">
+	<a href="https://www.facebook.com/matthew.croft.ca"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/matthewcroft_/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://imgur.com/a/dS7BpqB"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
+    <a href="https://www.pinterest.ca/mcroft4682/"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
+    <a href="https://twitter.com/MatthewCroft_"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/matthew-croft-b814b6146"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+	</div>
+	</div>
 <!-- End page content -->
 </div>
 
