--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	<div class="text-block w3-hide-small" style=" box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 0px 8px 0;">
 	<h2><b>My Portfolio - Matthew Croft</b></h2>
 	</div>
-	<img src="background.JPG" alt="image of Banff" class="" style="width:100%;margin:auto">
+	<img src="background.JPG" alt="image of Banff" title="Banff, Alberta, Canada (2018)" style="width:100%;margin:auto">
 	</div>
     <div class="w3-section w3-bottombar w3-padding-16 w3-margin-left">
       <span class="w3-margin-right w3-hide-small">Filter (Coming Soon):</span> 
