Job app. update

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <i class="fa fa-remove"></i>
     </a>
     <img src="profile-photo.JPG" alt="Profile Photo" style="width:65%;" class="w3-round"><br><br>
-    <h4><b>PORTFOLIO</b></h4>
-    <p class="w3-text-grey">~Matthew Croft</p>
+    <h4><b>Matthew Croft</b></h4>
+    <p class="w3-text-grey">Portfolio</p>
   </div>
   <div class="w3-bar-block">
     <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>PORTFOLIO</a> 
@@ -82,10 +82,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom" >
-      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.png" alt="Webpage on Vint Cerf" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Tribute Page"></a>
+      <a href="https://www.armbrae.ns.ca"><img src="armbrae.JPG" alt="Webpage on Vint Cerf" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Tribute Page"></a>
       <div class="w3-container w3-white">
-        <p><b>Tribute on Vint Cerf</b></p>
-        <p>This is a short web page all about one of the founders of the internet, Vint Cerf. The internet would not be possible without his work, and many things he has created we use every single day. Click the image to view.</p>
+        <p><b>Armbrae Academy</b></p>
+        <p>I am currently attending Armbrae Academy. I am enrolled in grade 11, and am in the graduating class of 2020. Click the image to view my school's site.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -138,16 +138,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="running_image.JPG" alt="Me" style="width:100%">
+      <img src="running_image.JPG" alt="Me" style="width:100%; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0">
     </div>
     <div class="w3-col m6">
-      <img src="swimming_image.JPG" alt="Me" style="width:100%">
+      <img src="swimming_image.JPG" alt="Me" style="width:100%; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0">
     </div>
   </div>
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>About Me</b></h4>
-    <p>Hey! I'm Matthew Croft and I am a highschool student in Halifax, NS. I have a passion for swimming and swim for the Dartmouth Crusader Swim Club. I love to take on leadership roles, I am the treasurer on the student council. I also enjoy to volunteer in the HRM community.</p>
+    <p>Hey! I'm Matthew Croft and I am a highschool student in Halifax, NS. I have a passion for swimming and swim for the Dartmouth Crusaders Swim Club. I love to take on leadership roles, I am the treasurer on my School's student council. I also enjoy to volunteer in the HRM community.</p>
     <hr>
 	
 	     <div class="w3-container">
@@ -155,30 +155,31 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     </div>
     
-    <h4>Technical Skills</h4>
+    <h4><strong>Technical Skills</strong></h4>
     <!-- Progress bars / Skills -->
     <p>Organizational Skills</p>
     <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:95%">95%</div>
+      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:97%">97%</div>
+    </div>
+    <p>Technical Swimming Skills</p>
+    <div class="w3-grey">
+      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:99%">98%</div>
     </div>
     <p>Computer Skills</p>
     <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:93%">93%</div>
-    </div>
-    <p>Swimming Skills</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:98%">98%</div>
+      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:92%">92%</div>
     </div>
     <p>
       <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
        <a href="example_resume.pdf" download="example_resume">
-		   <i class="fa fa-download w3-margin-right"></i>Download Resume (Now Avalible!)
+		   <i class="fa fa-download w3-margin-right"></i>Download Resume
 	   </a>
       </button>
+	   <p>(For Privacy reasons, personal resume only avalible upon request)</p>
     </p>
     <hr>
     
-    <h4>More about me.</h4>
+    <h4><strong>More about me.</strong></h4>
     <!-- Info Tables -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
@@ -198,8 +199,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 				<div class="w3-modal-content">
 				<div class="w3-container">
 				<span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-					<p>To find more about my school please send me an email.</p>
-						<p>Thanks.</p>
+					<p><strong>Armbrae Academy</strong></p>
+						<p>I currently attend Armbrae Academy in Halifax, NS. I am enrolled in grade 11, and will be graduating in the class of 2020. To learn more about the school click the link below.</p>
+						<a href="https://www.armbrae.ns.ca"> Armbrae Academy</a>
 			</div>
 			</div>
 			</div>
@@ -211,7 +213,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <ul class="w3-ul w3-border w3-white w3-center w3-opacity w3-hover-opacity-off">
           <li class="w3-teal w3-xlarge w3-padding-32">Awards</li>
           <li class="w3-padding-16">Club Merit Award- Dartmouth Crusaders Swim Club (2017)</li>
-          <li class="w3-padding-16">Elizabeth Yuen Award - For Responsibility</li>
+          <li class="w3-padding-16">Sacred Heart Scholar $9,000 Award Winner</li>
           <li class="w3-padding-16">Class Spirit Award-  For positive contribution to school life (2017)</li>
           <li class="w3-padding-16">Bronze Duke of Edinburgh Award</li>
           <li class="w3-padding-16">
@@ -238,8 +240,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
           <li class="w3-black w3-xlarge w3-padding-32">Swimming</li>
           <li class="w3-padding-16">Canada Games Athlete</li>
           <li class="w3-padding-16">Swim Instructor Certification</li>
-          <li class="w3-padding-16">Certified Lifeguard</li>
-          <li class="w3-padding-16">Part-Time Swim Coach</li>
+          <li class="w3-padding-16">Bronze Cross Certification</li>
+          <li class="w3-padding-16">Summer Part-Time Swim Coach</li>
           <li class="w3-padding-16">
             <h2>Dartmouth Crusaders Swim Club</h2>
             <span class="w3-opacity">2011-present</span>
@@ -275,7 +277,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
-        <p>Please e-mail for phone #</p>
+        <p>Phone number avalible on request</p>
       </div>
     </div>
     <hr class="w3-opacity">
@@ -325,12 +327,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
 
     <div class="w3-third">
-      <h3>POPULAR TAGS</h3>
+      <h3>Interests</h3>
       <p>
         <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Football</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Science</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Halifax</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">family</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">DIY</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Halifax</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Family</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">DIY</span>
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">Food</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Engeneering</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">School</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Friends</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">kindness</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">School</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Friends</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Kindness</span>
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">Swimming</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Gaming</span>
       </p>
     </div>
