--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom" >
-      <a href="https://www.armbrae.ns.ca"><img src="armbrae.JPG" alt="Webpage on Vint Cerf" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Tribute Page"></a>
+      <a href="https://www.armbrae.ns.ca"><img src="armbrae.JPG" alt="Armbrae Academy" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Armbrae's Webpage"></a>
       <div class="w3-container w3-white">
         <p><b>Armbrae Academy</b></p>
         <p>I am currently attending Armbrae Academy. I am enrolled in grade 11, and am in the graduating class of 2020. Click the image to view my school's site.</p>
@@ -340,7 +340,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
   </footer>
   
-  <div class="w3-black w3-center w3-padding-24">Designed by <a href="https://mattc2020.github.io/" title="W3.CSS" target="_blank" class="w3-hover-opacity">Matthew Croft</a></div>
+  <div class="w3-black w3-center w3-padding-24">Designed by <a href="https://mattc2020.github.io/" title="Matthew's Website" target="_blank" class="w3-hover-opacity">Matthew Croft</a></div>
 	<div style="text-align: center; background-color:black">
 	<div class="w3-tag w3-white w3-xlarge w3-margin-bottom">
 	<a href="https://www.facebook.com/matthew.croft.ca"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
