--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom" >
-      <a href="https://www.armbrae.ns.ca"><img src="armbrae.JPG" alt="Armbrae Academy" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Armbrae's Webpage"></a>
+      <a href="https://www.armbrae.ns.ca"><img src="armbrae.jpg" alt="Armbrae Academy" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Armbrae's Webpage"></a>
       <div class="w3-container w3-white">
         <p><b>Armbrae Academy</b></p>
         <p>I am currently attending Armbrae Academy. I am enrolled in grade 11, and am in the graduating class of 2020. Click the image to view my school's site.</p>
