--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="family.JPG" alt="Family" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Family</b></p>
-        <p>I love spending time with family. Here is a photo from 2005, with me and my mom.</p>
+        <p>I love spending time with family. Here is a photo from 2005, with myself,and my Mom.</p>
       </div>
     </div>
   </div>
