--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>About Me</b></h4>
-    <p>Hey! I'm Matthew Croft and I am a highschool student in Halifax, NS. I have a passion for swimming and swim for the Dartmouth Crusaders Swim Club. I love to take on leadership roles, I am the treasurer on my School's student council. I also enjoy to volunteer in the HRM community.</p>
+    <p>Hey! I'm Matthew Croft and I am a high school student in Halifax, NS. I have a passion for swimming and swim for the Dartmouth Crusaders Swim Club. I love to take on leadership roles, I am the treasurer on my School's student council. I also enjoy to volunteer in the HRM community.</p>
     <hr>
 	
 	     <div class="w3-container">
@@ -226,7 +226,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 					<div class="w3-modal-content">
 					<div class="w3-container">
 					<span onclick="document.getElementById('id02').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-						<p>To learn more about my awards, please send me an email.</p>
+						<p><strong>This </strong></p>
 						<p>Thanks.</p>
       </div>
     </div>
