Update to spelling

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://www.halifax.ca/sites/default/files/documents/city-hall/districts-councillors/3237%20Mancini%20Final%20FINAL.PDF"><img src="awards.JPG" title="Toni Mancini News Letter" alt="My Awards" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Nova Scotia Citizenship Award</b></p>
-        <p>In 2017 I was awarded the Nova Scotia Citizenship Award. This award is given to one grade 9 student who demonstrates good citizenship in their community. Here I am pictured with Mayor Mike Savage and my local representitive Toni Mancini.</p>
+        <p><b>HRM Citizenship Award</b></p>
+        <p>In 2017 I was awarded the HRM Citizenship Award. This award is given to one grade 9 student who demonstrates good citizenship in their community. Here I am pictured with Mayor Mike Savage and my local representitive Toni Mancini.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -217,7 +217,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
           <li class="w3-padding-16">Class Spirit Award-  For positive contribution to school life (2017)</li>
           <li class="w3-padding-16">Bronze Duke of Edinburgh Award</li>
           <li class="w3-padding-16">
-            <h2>Nova Scotia Citizenship Award</h2>
+            <h2>Halifax Regional Municipality Citizenship Award</h2>
             <span class="w3-opacity">2017</span>
           </li>
           <li class="w3-light-grey w3-padding-24">
@@ -226,7 +226,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 					<div class="w3-modal-content">
 					<div class="w3-container">
 					<span onclick="document.getElementById('id02').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-						<p><strong>This </strong></p>
+						<p><strong>To learn more about my awards, please send me an email. </strong></p>
 						<p>Thanks.</p>
       </div>
     </div>
