--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </header>
  
    <!-- Sign-In INFO -->
-	<h2><strong>THIS PAGE IS CURRENTLY UNDER DEVOLOPMENT.</h2></strong>
+	<h2><strong>THIS PAGE IS CURRENTLY UNDER DEVELOPMENT.</strong></h2>
 	<h3> Please come back soon.<h3>
   
   
