--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>Thanks for Visiting!</h3>
-      <p>If you have any question please send me and email, or feel free to follow me on my social media. </p>
+      <p>If you have any questions please send me and email, or feel free to follow me on my social media. </p>
     </div>
   
     <div class="w3-third">
