--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="running_image.JPG" alt="Me" style="width:100%; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0">
+      <img src="running_image.JPG" alt="Me" style="width:100%; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0" title="2018 EPIC race weekend">
     </div>
     <div class="w3-col m6">
-      <img src="swimming_image.JPG" alt="Me" style="width:100%; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0">
+      <img src="swimming_image.JPG" alt="Me" style="width:100%; box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0" title="Me swimming at 2017 Canada Games">
     </div>
   </div>
 
