--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -76,7 +76,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
  
    <!-- Sign-In INFO -->
 	<h2><strong>THIS PAGE IS CURRENTLY UNDER DEVELOPMENT.</strong></h2>
-	<h3> Please come back soon.<h3>
+	<h3> If you'd like to add a comment, add it below.<h3>
 		
   <!-- begin wwww.htmlcommentbox.com -->
  <div id="wpac-comment"></div>
