--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -93,7 +93,7 @@ wpac_init.push({widget: 'Comment', id: 14772});
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
 })();
 </script>
-<a href="https://widgetpack.com" class="wpac-cr">Comments System WIDGET PACK</a>
+<a href="https://widgetpack.com" class="wpac-cr">Comments System WIDGET PACK Loading...</a>
 <!-- end www.htmlcommentbox.com -->
   
   
