--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -79,7 +79,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	<h3> If you'd like to add a comment, add it below.<h3>
 		
   <!-- begin wwww.htmlcommentbox.com -->
- <div id="wpac-comment"></div>
+<div>
+<div id="wpac-comment"></div>
 <script type="text/javascript">
 wpac_init = window.wpac_init || [];
 wpac_init.push({widget: 'Comment', id: 14772});
@@ -93,6 +94,7 @@ wpac_init.push({widget: 'Comment', id: 14772});
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
 })();
 </script>
+</div>
 <!-- end www.htmlcommentbox.com -->
   
   
