--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	   <p>(For Privacy reasons, personal resume only avalible upon request)</p>
     </p>
     <hr>
+	
+	     <div class="w3-container">
+    <div class="w3-section w3-bottombar w3-padding-16">
+    </div>
+    </div>
     
 <!-- Project Tables -->
 	<div>
@@ -218,6 +223,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 	</div>	
+	
+	     <div class="w3-container">
+    <div class="w3-section w3-bottombar w3-padding-16">
+    </div>
+    </div>
 	
     <h4><strong>More about me.</strong></h4>
     <!-- Info Tables -->
