--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	    <h4><strong>Projects.</strong></h4>
 	  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom" >
-      <a href="https://www.armbrae.ns.ca"><img src="armbrae.jpg" alt="Armbrae Academy" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Armbrae's Webpage"></a>
+      <a href="https://www.armbrae.ns.ca"><img src="coin_trap.png" alt="Armbrae Academy" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Armbrae's Webpage"></a>
       <div class="w3-container w3-white">
-        <p><b>Armbrae Academy</b></p>
-        <p>I am currently attending Armbrae Academy. I am enrolled in grade 11, and am in the graduating class of 2020. Click the image to view my school's site.</p>
+        <p><b>3d Modeling</b></p>
+        <p>This project involved coding a 3d model to print. This model is a coin trap and hold a coin in the inside.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://cg2017.gems.pro/Result/ShowPerson.aspx?Person_GUID=44b5cd2e-140b-4621-b8f7-9d0bae72067e&SetLanguage=en-CA&Gems_ScreenWidth=1366&Gems_ScreenHeight=768&Gems_ScreenAvailWidth=1366&Gems_ScreenAvailHeight=677"><img src="canada_games.JPG" title="Canada Games Profile" alt="Image from Canada Games" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
+      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.png" title="Canada Games Profile" alt="Image from Canada Games" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>2017 Canada Games</b></p>
-        <p>This is an image of me starting my final in the 200m Breaststroke at the Canada Games.</p>
+        <p><b>Tribute to Vint Cerf</b></p>
+        <p>This is my first website built this year. It is a tribute to the founder of the internet, Vint Cerf.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
