--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="keji.JPG" alt="Image of Keji National Park"  style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity">
+      <img src="keji.JPG" alt="Image of Keji National Park"  style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Link Unavalibe">
       <div class="w3-container w3-white">
-        <p><b>Duke of Edinburgh - Silver</b></p>
-        <p>In October of 2018 myself and fellow classmates went on a two night backpacking trip through Kejimkujik National Park. This was the qualifying expedition for the Duke of Edinburgh Silver. </p>
+        <p><b>Photography</b></p>
+        <p>Click the image above to view a collection of my photography. </p>
       </div>
     </div>
   </div>
