--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 	    <h4><strong>Projects.</strong></h4>
 	  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom" >
-      <a href="https://www.armbrae.ns.ca"><img src="coin_trap.png" alt="Armbrae Academy" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="Visit Armbrae's Webpage"></a>
+      <a href="https://www.armbrae.ns.ca"><img src="coin_trap.png" alt="Armbrae Academy" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity" title="3d Modeling Code"></a>
       <div class="w3-container w3-white">
         <p><b>3d Modeling</b></p>
         <p>This project involved coding a 3d model to print. This model is a coin trap and hold a coin in the inside.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.png" title="Canada Games Profile" alt="Image from Canada Games" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
+      <a href="https://mattc2020.github.io/tribute/"><img src="tribute_page.png" title="Visit Webpage" alt="Image from Canada Games" style="width:100%; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Tribute to Vint Cerf</b></p>
         <p>This is my first website built this year. It is a tribute to the founder of the internet, Vint Cerf.</p>
