--- a/index.html
+++ b/index.html
@@ -167,21 +167,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     </div>
     
-    <h4><strong>Technical Skills</strong></h4>
+    <h4><strong>Sample Resume</strong></h4>
+	  
     <!-- Progress bars / Skills -->
-    <p>Organizational Skills</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:97%">97%</div>
-    </div>
-    <p>Technical Swimming Skills</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:99%">98%</div>
-    </div>
-    <p>Computer Skills</p>
-    <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:92%">92%</div>
-    </div>
-    <p>
+	  
       <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
        <a href="example_resume.pdf" download="example_resume">
 		   <i class="fa fa-download w3-margin-right"></i>Download Resume
