--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     </div>
     
-    <h4><strong>Sample Resume</strong></h4>
+    <h4><strong>Class Averages</strong></h4>
 	  
     <!-- Progress bars / Skills -->
-	  <p>Organizational Skills</p>
+	  <p>Physics</p>
     <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:97%">97%</div>
+      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:94%">94%</div>
     </div>
-    <p>Technical Swimming Skills</p>
+    <p>English</p>
     <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:99%">98%</div>
+      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:99%">99%</div>
     </div>
-    <p>Computer Skills</p>
+    <p>Computer Scicence</p>
     <div class="w3-grey">
-      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:92%">92%</div>
+      <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:96%">96%</div>
     </div>
     <p>
       <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
