--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
         <p>mcroft@eastlink.ca</p>
       </div>
-      <div class="w3-third w3-teal" onclick="document.getElementById('id04').style.display='block'">
+      <div class="w3-third w3-teal">
         <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
-        <p>Halifax, NS</p>
+        <p onclick="document.getElementById('id04').style.display='block'">Halifax, NS</p>
 	      <div id="id04" class="w3-modal">
 				<div class="w3-modal-content">
 				<div class="w3-container">
