--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 				<div class="w3-modal-content">
 				<div class="w3-container">
 				<span onclick="document.getElementById('id04').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-					<h1>Below is a map of Halifax</h1>
+					<h1 style="color: white;">Below is a map of Halifax</h1>
 					<iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		   </div>
